# idfc-p2p-platform

./: .gitignore  AI_Native_Event_Driven_P2P_Platform_Blueprint.docx  CLAUDE.md  Dockerfile  HOW_TO_RUN.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start_backend.bat  start_frontend.bat
backend/: __init__.py  base_model.py  config.py  database.py  dependencies.py  event_bus.py  exceptions.py  main.py  seed.py  state_machines.py
backend/migrations/: env.py
backend/modules/: __init__.py
backend/modules/ai_agents/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/analytics/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/audit/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/auth/: __init__.py  constants.py  models.py  routes.py  schemas.py  service.py
backend/modules/budgets/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/contracts/: __init__.py  events.py  models.py  routes.py  schemas.py  service.py
backend/modules/documents/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/ebs_integration/: __init__.py  (+4 more)
backend/tests/: __init__.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_CONTEXT.md  DAILY_OPERATIONS.md  DATA_MODEL.md  DEPLOYMENT.md  SPRINT4_CHANGELOG.md  enterprise-p2p-reference.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
scripts/: create_superuser.py  reset_db.py  seed_db.py
(+91 files in other folders)
